[gd_scene load_steps=16 format=2]

[ext_resource path="res://resources/Glider_Metal.tres" type="Material" id=1]
[ext_resource path="res://scenes/GPRocket.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/camera_env.tres" type="Environment" id=3]
[ext_resource path="res://scripts/Plane03.gd" type="Script" id=6]
[ext_resource path="res://resources/Glider_Engine.tres" type="Material" id=8]
[ext_resource path="res://scenes/LG_Strut.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/Engine.tscn" type="PackedScene" id=10]
[ext_resource path="res://resources/Glider_Gear_Bay.tres" type="Material" id=11]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/WpnRack.tscn" type="PackedScene" id=15]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.03

[sub_resource type="CapsuleShape" id=2]
margin = 0.001
height = 13.2845

[sub_resource type="BoxShape" id=3]
margin = 0.001
extents = Vector3( 20, 0.2, 2 )

[sub_resource type="BoxShape" id=4]
margin = 0.001
extents = Vector3( 4, 0.1, 1.2 )

[sub_resource type="BoxShape" id=5]
margin = 0.001
extents = Vector3( 0.1, 1.5, 1 )

[node name="Plane" type="Spatial"]

[node name="Plane03" type="RigidBody" parent="."]
mass = 2000.0
physics_material_override = SubResource( 1 )
custom_integrator = true
continuous_cd = true
contacts_reported = 32
can_sleep = false
linear_damp = 0.0
angular_damp = 3.0
script = ExtResource( 6 )

[node name="Glider_CSG_Mesh" type="Spatial" parent="Plane03"]

[node name="Fuse_Mid" type="CSGCylinder" parent="Plane03/Glider_CSG_Mesh"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.045 )
height = 6.0
sides = 32
material = ExtResource( 1 )

[node name="Tail_V" type="CSGCylinder" parent="Plane03/Glider_CSG_Mesh/Fuse_Mid"]
transform = Transform( 0.05, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -10.045, 1.5 )
height = 3.0
sides = 32
material = ExtResource( 1 )

[node name="Tail_H" type="CSGCylinder" parent="Plane03/Glider_CSG_Mesh/Fuse_Mid"]
transform = Transform( -2.18557e-09, -1, 0, -2.18557e-09, 1.91069e-15, -1, 0.05, -4.37114e-08, -4.37114e-08, 0, -9.545, 0 )
height = 8.0
sides = 32
material = ExtResource( 1 )

[node name="Fuse_Nose" type="CSGSphere" parent="Plane03/Glider_CSG_Mesh/Fuse_Mid"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -3, 0, 1, -1.31134e-07, 0.00378609, 3.00011, -9.53674e-07 )
radial_segments = 32
rings = 32
material = ExtResource( 1 )

[node name="Fuse_Aft" type="CSGSphere" parent="Plane03/Glider_CSG_Mesh/Fuse_Mid"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -8, 0, 1, -3.49691e-07, 0.00378609, -2.99989, -9.53674e-07 )
radial_segments = 32
rings = 32
material = ExtResource( 1 )

[node name="Wing_Origin" type="Spatial" parent="Plane03/Glider_CSG_Mesh/Fuse_Mid"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.75 )

[node name="Wing" type="CSGCylinder" parent="Plane03/Glider_CSG_Mesh/Fuse_Mid/Wing_Origin"]
transform = Transform( -6.55671e-09, -1, 4.37114e-08, 0, -4.37114e-08, -1, 0.15, -4.37114e-08, 3.55271e-15, 0, 0, 0 )
radius = 2.0
height = 40.0
sides = 32
material = ExtResource( 1 )

[node name="Intake" type="CSGCylinder" parent="Plane03/Glider_CSG_Mesh/Fuse_Mid/Wing_Origin/Wing"]
transform = Transform( 1, -1.27379e-14, 5.68434e-14, 1.57486e-16, 1, 0, 0, 0, 1, 0, 0, -1.87 )
operation = 2
height = 4.0
material = ExtResource( 8 )

[node name="MLG_Bay" type="CSGBox" parent="Plane03/Glider_CSG_Mesh/Fuse_Mid/Wing_Origin/Wing"]
transform = Transform( -7.43113e-08, -6.54393, 5.68434e-14, 1.70004, -2.86044e-07, 0, 0, 0, 1, -0.569283, 4.27251e-08, 0.892046 )
operation = 2
width = 6.0
height = 0.5
depth = 1.0
material = ExtResource( 11 )

[node name="MLG_Bay_Fill" type="CSGBox" parent="Plane03/Glider_CSG_Mesh/Fuse_Mid/Wing_Origin/Wing/MLG_Bay"]
transform = Transform( 1, 1.10322e-15, 0, -3.79626e-15, 1, 0, -7.10543e-15, -3.55271e-15, 1, 1.13687e-13, 0, 0 )
operation = 2
width = 2.8

[node name="Hinge_Aileron_L" type="Spatial" parent="Plane03/Glider_CSG_Mesh/Fuse_Mid/Wing_Origin"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -16, -2.045, 0 )

[node name="ControlSurface" type="CSGBox" parent="Plane03/Glider_CSG_Mesh/Fuse_Mid/Wing_Origin/Hinge_Aileron_L"]
transform = Transform( -2.18557e-09, -1, 0, 0.05, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0.9 )
height = 8.0
material = ExtResource( 1 )

[node name="Hinge_Aileron_R" type="Spatial" parent="Plane03/Glider_CSG_Mesh/Fuse_Mid/Wing_Origin"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 16, -2.045, 0 )

[node name="ControlSurface" type="CSGBox" parent="Plane03/Glider_CSG_Mesh/Fuse_Mid/Wing_Origin/Hinge_Aileron_R"]
transform = Transform( -2.18557e-09, -1, 0, 0.05, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0.9 )
height = 8.0
material = ExtResource( 1 )

[node name="Hinge_Flap_L" type="Spatial" parent="Plane03/Glider_CSG_Mesh/Fuse_Mid/Wing_Origin"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -7.9, -2.045, 0 )

[node name="ControlSurface" type="CSGBox" parent="Plane03/Glider_CSG_Mesh/Fuse_Mid/Wing_Origin/Hinge_Flap_L"]
transform = Transform( -2.18557e-09, -1, 0, 0.05, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0.9 )
height = 8.0
material = ExtResource( 1 )

[node name="Hinge_Flap_R" type="Spatial" parent="Plane03/Glider_CSG_Mesh/Fuse_Mid/Wing_Origin"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 7.9, -2.045, 0 )

[node name="ControlSurface" type="CSGBox" parent="Plane03/Glider_CSG_Mesh/Fuse_Mid/Wing_Origin/Hinge_Flap_R"]
transform = Transform( -2.18557e-09, -1, 0, 0.05, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0.9 )
height = 8.0
material = ExtResource( 1 )

[node name="NLG_Bay" type="CSGBox" parent="Plane03/Glider_CSG_Mesh/Fuse_Mid"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -3, 0, 1, -1.31134e-07, 0.00378609, 3.04411, -0.606605 )
operation = 2
width = 0.5
depth = 0.9
material = ExtResource( 11 )

[node name="Hinge_Elevator_L" type="Spatial" parent="Plane03/Glider_CSG_Mesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.4, 0, 10.5 )

[node name="ControlSurface" type="CSGBox" parent="Plane03/Glider_CSG_Mesh/Hinge_Elevator_L"]
transform = Transform( -2.18557e-09, -1, 0, 0.05, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0.515065 )
height = 3.0
depth = 1.0
material = ExtResource( 1 )

[node name="Hinge_Elevator_R" type="Spatial" parent="Plane03/Glider_CSG_Mesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.4, 0, 10.5 )

[node name="ControlSurface" type="CSGBox" parent="Plane03/Glider_CSG_Mesh/Hinge_Elevator_R"]
transform = Transform( -2.18557e-09, -1, 0, 0.05, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0.515 )
height = 3.0
depth = 1.0
material = ExtResource( 1 )

[node name="Hinge_Rudder" type="Spatial" parent="Plane03/Glider_CSG_Mesh"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 1.5, 11 )

[node name="ControlSurface" type="CSGBox" parent="Plane03/Glider_CSG_Mesh/Hinge_Rudder"]
transform = Transform( -2.18557e-09, -1, 0, 0.05, -4.37114e-08, 0, 0, 0, 1, 0.253772, -1.10928e-08, 0.489329 )
height = 2.5
depth = 1.0
material = ExtResource( 1 )

[node name="CollisionShape_Fuse" type="CollisionShape" parent="Plane03"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.2 )
shape = SubResource( 2 )

[node name="CollisionShape_Wing" type="CollisionShape" parent="Plane03"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.75, 0 )
shape = SubResource( 3 )

[node name="CollisionShape_Tail_H" type="CollisionShape" parent="Plane03"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9.8 )
shape = SubResource( 4 )

[node name="CollisionShape_Tail_V" type="CollisionShape" parent="Plane03"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 10 )
shape = SubResource( 5 )

[node name="Engine" parent="Plane03" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10 )

[node name="Camera_FPV" type="Camera" parent="Plane03"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6 )
environment = ExtResource( 3 )
current = true
far = 100000.0

[node name="HUD" parent="Plane03/Camera_FPV" instance=ExtResource( 13 )]

[node name="Camera_Ext" type="Camera" parent="Plane03"]
transform = Transform( 1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 3.06319, 8.90095 )
cull_mask = 1048573
environment = ExtResource( 3 )
far = 100000.0

[node name="Wpn_Rack_1" parent="Plane03" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -1, -1 )

[node name="Wpn_Rack_2" parent="Plane03" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -1, -1 )

[node name="Wpn_Rack_3" parent="Plane03" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -1, -1 )

[node name="Wpn_Rack_4" parent="Plane03" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, -1, -1 )

[node name="LG_AttachPoint_Nose" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.833, -4.132 )
continuous_cd = true

[node name="LG_AttachPoint_Main_L" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.808, -0.833, 0.879 )
custom_integrator = true

[node name="LG_AttachPoint_Main_R" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.808, -0.833, 0.879 )
continuous_cd = true

[node name="Joint_NLG_1" type="Generic6DOFJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.95, -4.128 )
nodes/node_a = NodePath("../Plane03")
nodes/node_b = NodePath("../LG_AttachPoint_Nose")

[node name="Joint_NLG_2" type="Generic6DOFJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.95, -4.128 )
nodes/node_a = NodePath("../Plane03")
nodes/node_b = NodePath("../LG_AttachPoint_Nose")

[node name="Joint_MLG_L_1" type="Generic6DOFJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.003, -0.95, 0.517 )
nodes/node_a = NodePath("../Plane03")
nodes/node_b = NodePath("../LG_AttachPoint_Main_L")

[node name="Joint_MLG_L_2" type="Generic6DOFJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.003, -0.95, 0.517 )
nodes/node_a = NodePath("../Plane03")
nodes/node_b = NodePath("../LG_AttachPoint_Main_L")

[node name="Joint_MLG_R_1" type="Generic6DOFJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.003, -0.95, 0.517 )
nodes/node_a = NodePath("../Plane03")
nodes/node_b = NodePath("../LG_AttachPoint_Main_R")

[node name="Joint_MLG_R_2" type="Generic6DOFJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.003, -0.95, 0.517 )
nodes/node_a = NodePath("../Plane03")
nodes/node_b = NodePath("../LG_AttachPoint_Main_R")

[node name="GPRocket_1" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -1.665, -1.2 )

[node name="GPRocket_2" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -1.665, -1.2 )

[node name="GPRocket_3" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -1.665, -1.2 )

[node name="GPRocket_4" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, -1.665, -1.2 )

[node name="Wpn_Joint_1" type="Generic6DOFJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -1, -1.1 )
nodes/node_a = NodePath("../Plane03")
nodes/node_b = NodePath("../GPRocket_1")

[node name="Wpn_Joint_2" type="Generic6DOFJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -1, -1.1 )
nodes/node_a = NodePath("../Plane03")
nodes/node_b = NodePath("../GPRocket_2")

[node name="Wpn_Joint_3" type="Generic6DOFJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -1, -1.1 )
nodes/node_a = NodePath("../Plane03")
nodes/node_b = NodePath("../GPRocket_3")

[node name="Wpn_Joint_4" type="Generic6DOFJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, -1, -1.1 )
nodes/node_a = NodePath("../Plane03")
nodes/node_b = NodePath("../GPRocket_4")
